--- a/w5-pet/css/pet.css
+++ b/w5-pet/css/pet.css
@@ -1,5 +1,25 @@
+body {
+    background: url(../images/bg.jpg);
+}
 header {
-    width: 100%;
-    height: 100px;
-    background-color: #531d1d 
+    width: 800px;
+    height: 80px;
+    background-color: #330000;
+}
+aside {
+    width: 170px;
+    height: 400px;
+    background: url(../images/bg_lt.png);
+    float: left
+}
+article {
+    width: 628px;
+    height: 400px;
+    margin-left: 172px;
+    background-color: aquamarine
+}
+footer {
+    width: 800px;
+    height: 50px;
+    background-color: #330000;
 }
