--- a/w5-pet/css/pet.css
+++ b/w5-pet/css/pet.css
@@ -10,16 +10,35 @@ aside {
     width: 170px;
     height: 400px;
     background: url(../images/bg_lt.png);
-    float: left
+    float: left;
 }
 article {
     width: 628px;
     height: 400px;
     margin-left: 172px;
-    background-color: aquamarine
+    background-color: white;
 }
 footer {
     width: 800px;
     height: 50px;
     background-color: #330000;
+}
+nav {
+    margin-top: 170px;
+}
+nav ul {
+    padding: 10px;
+    list-style: none;
+}
+nav ul li a{
+    display: block;
+    width: 150px;
+    height: 42px;
+    background-image: url(../images/btn.png);
+    text-indent: 50px;
+    line-height: 35px;
+}
+nav ul li a:hover {
+    background-image: url(../images/btn_hover.png);
+    color: white;
 }
